# cockpit-crm

./: README.md
backend/: .dockerignore.bak  .editorconfig  .gitignore  .pre-commit-config.yaml  conftest.py  docker-compose.yml  init.sql  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/apps/accounts/: permissions.py  serializers.py  urls.py  views.py
backend/apps/audit/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/audit/migrations/: 0001_initial.py  0002_sync_updated_at_field.py
backend/apps/common/: exceptions.py  health.py  middleware.py
backend/apps/core/: admin.py  api_extras.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0002_schema_lock_in.py  0003_add_timestamps.py  0004_state_models.py  0005_alter_entitytype_id.py  0006_state_entitytype_is_active.py  0007_enable_extensions.py  0008_scd2_constraints_indexes.py  0009_add_hashdiff_fields.py  0010_merge_20250925_1217.py  0011_entity_constraints.py  0012_noop_sync.py  0013_hashdiff_notnull.py  0014_remove_entity_entity_current_uniq_and_more.py  0015_sync_state_after_drops.py  0016_safe_constraints_postgres.py
backend/apps/core/services/: scd2.py
backend/apps/core/utils/: hashdiff.py
backend/apps/crm/: apps.py  models.py  seed_entity_types.py
backend/apps/crm/migrations/: 0004_fix_scd2_constraints.py  (+2 more)
backend/config/: asgi.py  schema.py  urls.py  wsgi.py
backend/config/settings/: base.py  ci.py  test_sqlite.py  test_toggle.py
backend/docker/: app.Dockerfile  postgres.Dockerfile
backend/docker/postgres/: init.sql
backend/tests/: conftest.py  test_health.py  test_imports.py
backend/tests/audit/: test_audit_log.py
backend/tests/common/: test_models_basic.py
backend/tests/core/: test_contraints.py  test_hash_module_dynamic.py  test_models_smoke.py  test_non_conflicting_entities.py  test_overlap_edges.py  test_scd2_detail.py  test_scd2_entity.py  test_serializers_detail.py  test_serializers_entity.py  test_serializers_shapes.py
backend/tests/serializers/: test_serializers.py
(+4 files in other folders)
